Introduce code-review profile